--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@ body {
     margin: 0;
     padding: 0;
 }
+.right_section{
+    margin-top: 200px;
+    margin: auto;
+}
+.text{
+    margin: 0;
+    padding-bottom: 3%;
+    font-family: 'Montserrat', sans-serif;
+}
 
 .navbar {
     background-color: black;
@@ -38,16 +47,17 @@ body {
     margin-left: 20px;
 } 
 .container {
-    margin: 0 20px;
+    margin: 2% 5%;
     display: flex;
     justify-content: space-evenly;
-    align-items: start;
     flex:1;
-  }
   
+  }
+  .left_section{
+    max-width: 25rem;
+  }
  .box {
     background-color: rgba(180, 29, 29, 0.4);
-    border: 2px dashed;
     border-radius: 4px;
   
     width: fit-content;
@@ -55,9 +65,16 @@ body {
     padding: 1.5rem;
     margin: 0 auto;
   }
+  .line {
+    margin: 10px;
+    height: 100%;
+    width: 4px;
+    background-color: #000000;
+    margin: 0 20px;
+  }
   
 #map{
-    width: 400px;
+    width: 35rem;
     height: 300px;
     margin-bottom: 1rem;
   }
@@ -66,12 +83,89 @@ body {
     display: flex;
     flex-wrap: wrap;
     border-radius: 0.5rem;
-    background-color: #EEE;
+    background-color: #dad8d8;
     box-sizing: border-box;
     box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06);
     padding: 0.25rem;
     width: 300px;
     font-size: 14px;
+    margin: 1rem auto 1rem;
+}
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+    width: 20rem;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 4px rgba(193, 193, 193, 0.1);
+    padding: 1rem;
+    font-size: 16px;
+  }
+  
+  .form label {
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+  }
+
+  
+  .form select,
+  .form textarea {
+    width: 100%;
+    padding: 0.5rem;
+ 
+    border: 1px solid #ccc;
+    border-radius: 0.25rem;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+  }
+  
+  .form select {
+    appearance: none;
+    background-color: transparent;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23808E9B' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M6 9l6 6 6-6'%3E%3C/path%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 0.5rem center;
+    background-size: 1rem auto;
+    padding-right: 2rem;
+  }
+  
+  .form textarea {
+    height: 8rem;
+  }
+  #state-select{
+    border-radius: 0.5rem;
+
+  }
+  .form .radio-inputs {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+  }
+  
+  .form .radio-inputs .radio {
+    display: flex;
+   
+    margin: 0.5rem;
+  }
+  
+  .form .radio-inputs .radio input[type="radio"] {
+    display: none;
+  }
+  
+  .form .radio-inputs .radio label {
+    cursor: pointer;
+    margin-left: 0.5rem;
+  }
+  
+  .form .radio-inputs .radio input[type="radio"]:checked + label {
+    color: #000;
+    font-weight: bold;
   }
   
   .radio-inputs .radio {
@@ -98,7 +192,8 @@ body {
   }
   
   .radio-inputs .radio input:checked + .name {
-    background-color: #fff;
+    background-color: #4545d8;
+    color: #ffffff;
     font-weight: 600;
     text-transform: uppercase;
   }
