--- a/style.css
+++ b/style.css
@@ -1,282 +1,313 @@
-
 body {
-    margin: 0;
-    padding: 0;
-}
-.right_section{
-    margin-top: 200px;
-    margin: auto;
-}
-.text{
-    margin: 0;
-    padding-bottom: 3%;
-    font-family: 'Montserrat', sans-serif;
-}
-.about-paragraph{
-  padding: 5% 22% 0% 25%;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
   margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
+
+.right_section {
+  margin: auto;
+}
+
+.text {
+  margin: 1.5rem;
+  font-family: "Montserrat", sans-serif;
+}
+
 .navbar {
-    background-color: black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 17px;
-    font-family: 'Roboto', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 17px;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .navbar-brand {
-    color: white;
-    font-size: 30px;
-    text-decoration: none;
+  color: white;
+  font-size: 30px;
+  text-decoration: none;
 }
 
 .navbar-nav {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0, 10px;
-    font-family: 'Roboto', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .nav-link {
-    color: rgb(229, 25, 25);
-    font-size: 14px;
-    text-decoration: none;
-    margin-left: 20px;
-} 
+  color: rgb(229, 25, 25);
+  font-size: 14px;
+  text-decoration: none;
+  margin-left: 20%;
+}
+
 .container {
-    margin: 2% 5%;
-    display: flex;
-    justify-content: space-evenly;
-    flex:1;
-  
-  }
-  .left_section{
-    max-width: 25rem;
-  }
- .box {
-    background-color: rgba(255, 255, 255, 0.183);
-    border-radius: 4px;
-  
-    width: fit-content;
-    height:fit-content;
-    padding: 1.5rem;
-    margin: 0 auto;
-  }
-  .line {
-    margin: 10px;
-    height: 100%;
-    width: 4px;
-    background-color: #b9a9a9;
-    margin: 0 20px;
-  }
-  
-#map, #chartContainer{
-    width: 40rem;
-    height: 25rem;
-    margin-bottom: 1rem;
-    border-radius: .5rem;
-  }
-  .radio-inputs {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    border-radius: 0.5rem;
-    background-color: #dad8d8;
-    box-sizing: border-box;
-    box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06);
-    padding: 0.25rem;
-    width: 300px;
-    font-size: 14px;
-    margin: 1rem auto 1rem;
+  padding: 2% 5%;
+  display: flex;
+  justify-content: space-evenly;
+  flex: 1;
 }
+
+.left_section {
+  max-width: 25rem;
+}
+
+.box {
+  background-color: rgba(255, 255, 255, 0.183);
+  border-radius: 4px;
+
+  width: fit-content;
+  height: fit-content;
+  padding: 1.5rem;
+  margin: 0 auto;
+}
+
+.line {
+  margin: 10px;
+  height: 100%;
+  width: 4px;
+  background-color: #b9a9a9;
+  margin: 0 20px;
+}
+
+#map {
+  width: 40rem;
+  height: 25rem;
+  border-radius: 0.5rem;
+}
+
+#chartContainer {
+  width: 40rem;
+  height: 18rem;
+  border-radius: 0.5rem;
+}
+
+.radio-inputs {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 0.5rem;
+  background-color: #dad8d8;
+  box-sizing: border-box;
+  box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06);
+  padding: 0.25rem;
+  width: 300px;
+  font-size: 14px;
+  margin: 1rem auto 1rem;
+}
+
 .form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem;
-    width: 20rem;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 0.5rem;
-    box-shadow: 0 2px 4px rgba(193, 193, 193, 0.1);
-    padding: 1rem;
-    font-size: 16px;
-  }
-  
-  .form label {
-    margin-bottom: 0.5rem;
-    font-weight: bold;
-  }
-
-  
-  .form select,
-  .form textarea {
-    width: 100%;
-    padding: 0.5rem;
- 
-    border: 1px solid #ccc;
-    border-radius: 0.25rem;
-    font-size: 16px;
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  .form select {
-    appearance: none;
-    background-color: transparent;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23808E9B' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M6 9l6 6 6-6'%3E%3C/path%3E%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-position: right 0.5rem center;
-    background-size: 1rem auto;
-    padding-right: 2rem;
-  }
-  
-  .form textarea {
-    height: 8rem;
-  }
-  #state-select{
-    border-radius: 0.5rem;
-  }
-  .form .radio-inputs {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1rem;
-  }
-  
-  .form .radio-inputs .radio {
-    display: flex;
-    margin: 0.5rem;
-    font-family: 'Roboto', sans-serif
-  }
-  
-  .form .radio-inputs .radio input[type="radio"] {
-    display: none;
-  }
-  
-  .form .radio-inputs .radio label {
-    cursor: pointer;
-    margin-left: 0.5rem;
-  }
-  
-  .form .radio-inputs .radio input[type="radio"]:checked + label {
-    color: #000;
-    font-weight: bold;
-  }
-  
-  .radio-inputs .radio {
-    flex: 1 1 auto;
-    text-align: center;
-  }
-  
-  .radio-inputs .radio input {
-    display: none;
-  }
-  .chartContainer{
-    width: 500px;
-    height: 500px;
-  }
-  .radio-inputs .radio .name {
-    display: flex;
-    cursor: pointer;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0.5rem;
-    border: none;
-    padding: .5rem 0;
-    color: rgba(51, 65, 85, 1);
-    transition: all .15s ease-in-out;
-    text-transform: uppercase;
-    font-family: 'Roboto', sans-serif
-
-  }
-  
-  .radio-inputs .radio input:checked + .name  {
-    background-color: #4545d8;
-    color: #ffffff;
-    font-weight: 600;
-    text-transform: uppercase;
-  } 
-  .goback{
-    background-color: #4545d8;
-    color: #ffffff;
-    border: none;
-    font-weight: 600;
-    text-transform: uppercase;
-    border-radius: 0.5rem;
-    padding: .5rem 1rem;
-    display: flex;
-    cursor: pointer;
-    align-items: center;
-    font-family: 'Roboto', sans-serif;
-    margin: 3rem auto ;
-  }
-
-  .visible{
-display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 20rem;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 4px rgba(193, 193, 193, 0.1);
+  padding: 1rem;
+  font-size: 16px;
 }
-.hidden{
+
+.form label {
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+.form select,
+.form textarea {
+  width: 100%;
+  padding: 0.5rem;
+
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+
+.form select {
+  appearance: none;
+  background-color: transparent;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23808E9B' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M6 9l6 6 6-6'%3E%3C/path%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 0.5rem center;
+  background-size: 1rem auto;
+  padding-right: 2rem;
+}
+
+.form textarea {
+  height: 8rem;
+}
+
+#state-select {
+  border-radius: 0.5rem;
+}
+
+.form .radio-inputs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.form .radio-inputs .radio {
+  display: flex;
+  margin: 0.5rem;
+  font-family: "Roboto", sans-serif;
+}
+
+.form .radio-inputs .radio input[type="radio"] {
+  display: none;
+}
+
+.form .radio-inputs .radio label {
+  cursor: pointer;
+  margin-left: 0.5rem;
+}
+
+.form .radio-inputs .radio input[type="radio"]:checked+label {
+  color: #000;
+  font-weight: bold;
+}
+
+.radio-inputs .radio {
+  flex: 1 1 auto;
+  text-align: center;
+}
+
+.radio-inputs .radio input {
+  display: none;
+}
+
+.chartContainer {
+  width: 500px;
+  height: 500px;
+}
+
+.radio-inputs .radio .name {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+  border: none;
+  padding: 0.5rem 0;
+  color: rgba(51, 65, 85, 1);
+  transition: all 0.15s ease-in-out;
+  text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
+}
+
+.radio-inputs .radio input:checked+.name {
+  background-color: #4545d8;
+  color: #ffffff;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.checkDemographics:checked {
+  background-color: #4545d8;
+}
+
+.goback {
+  background-color: #4545d8;
+  color: #ffffff;
+  border: none;
+  font-weight: 600;
+  text-transform: uppercase;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  margin: 3rem auto;
+}
+
+.visible {
+  display: block !important;
+}
+
+.hidden {
   display: none !important;
-  }
-  
-@media screen  and (max-width:1136px){
-  #map, #chartContainer{
+}
+
+.about-paragraph {
+  padding: 5% 22% 0% 25%;
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  margin: 0;
+  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.7);
+  /* white color with 70% opacity */
+}
+
+.together {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 40%;
+  opacity: 15%;
+}
+
+@media screen and (max-width: 1136px) {
+  #map {
     width: 30rem;
     height: 25rem;
     margin-bottom: 1rem;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
+  }
+
+  #chartContainer {
+    width: 30rem;
+    height: auto;
   }
 }
+
 @media screen and (max-width: 995px) {
-  .form{
+  .form {
     width: 70%;
   }
-  .left_section {
-     max-width: 100%; 
-}
-    .navbar-brand {
-        font-size: 20px;
-    }
-    .navbar{
-      width: 100%;
-    }
 
-    text {
-      margin-left: 1rem;
-    }
-    .container{
-      display: inline;
-    }
-    .box{
-      margin: 1.5rem;
-    }
-    .nav-link {
-        font-size: 16px;
-    }
-    #map, #chartContainer{
-      width: 100%;
-      height: 20rem;
-      margin-bottom: 1rem;
-      border-radius: .5rem;
-      display: none;
-    }
-}
-@media screen and (max-width: 390px) {
-  #map, #chartContainer{
-    width: 100%;
-    height: 20rem;
+  .left_section {
+    max-width: 100%;
+  }
+
+  .navbar-brand {
+    font-size: 20px;
+  }
+
+  text {
+    margin-left: 1.5rem;
+  }
+
+  .container {
+    display: inline;
+  }
+
+  .nav-link {
+    font-size: 16px;
+  }
+
+  #map,
+  #chartContainer {
+    width: 96.5%;
+    height: 25rem;
     margin-bottom: 1rem;
-    border-radius: .5rem;
-    display: none;
+    border-radius: 0.5rem;
+  }
+
+  .about-paragraph {
+    padding: 5% 10% 0% 10%;
   }
 }
